# RecycleSorter

./: LICENSE  README.md  index.html
ReCyclists/: keepOnline.py  keras_model.h5  labels.txt  main.py  pyproject.toml
ReCyclists/commands/Utility/: ping.py  recycle.py
